# python-pathfinding

./: .gitignore  README.md  pyproject.toml
scripts/: build_exe.py  installer-script.iss  target.py
src/pathfinding/: __init__.py  algorithms.py  cubes.py  languages.py  main.py  main_game.py  scenes.py
src/pathfinding/data/: en_GB.json  pt_BR.json
