[build-system]
requires = ["setuptools>=61.0",
            "basic-engine @ git+https://github.com/smolBlackCat/python-game-engine.git"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfinding_demo"
version = "1.0.0"
authors = [
  { name="De Moura", email="smolBlackCat@proton.me" },
]
description = "Application for demonstrating the differences between pathfinding algorithms."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies= ["pygame"]

[project.urls]
"Homepage" = "https://github.com/smolBlackCat/python-pathfinding"
"Bug Tracker" = "https://github.com/smolBlackCat/python-pathfinding/issues"