[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moura-pathfinding"
version = "1.0.0"
authors = [
  { name="De Moura", email="smolBlackCat@proton.me" },
]
description = "Application for demonstrating the differences between pathfinding algorithms."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies= ["pygame",
               "basic_engine @ git+https://github.com/smolBlackCat/python-game-engine.git"]

[project.urls]
"Homepage" = "https://github.com/smolBlackCat/python-pathfinding"
"Bug Tracker" = "https://github.com/smolBlackCat/python-pathfinding/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pathfinding.data" = ["*.png"]